<?xml version="1.0" encoding="utf-8"?>

<!--Author @ Mohit Soni-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#000000"
        android:orientation="vertical"
        tools:context=".Click_Count">

        <!-- show number -->
        <TextView
            android:id="@+id/digit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            android:gravity="center"
            android:text="@string/digit"
            android:textColor="#40FF00"
            android:textSize="100sp" />

        <RelativeLayout
            android:id="@+id/relative1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/digit"
            android:orientation="horizontal">

            <!-- count button -->
            <Button
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/count1" />

            <!-- reset button -->
            <Button
                android:id="@+id/clear"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:layout_toLeftOf="@+id/count"
                android:background="@drawable/reset1" />

        </RelativeLayout>

        <!-- radio group enbles you to make select only one radio button -->
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal"
            android:weightSum="1">

            <!-- radio button to select option -->
            <RadioButton
                android:id="@+id/one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:onClick="OnClick"
                android:text="@string/one"
                android:textColor="#ffffff" />

            <RadioButton
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:onClick="OnClick"
                android:text="@string/two"
                android:textColor="#ffffff" />

            <RadioButton
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:onClick="OnClick"
                android:text="@string/three"
                android:textColor="#ffffff" />

            <RadioButton
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:onClick="OnClick"
                android:text="@string/four"
                android:textColor="#ffffff" />

            <RadioButton
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:onClick="OnClick"
                android:text="@string/five"
                android:textColor="#ffffff" />
        </RadioGroup>
    </RelativeLayout>
</LinearLayout>